  - Minor fixes to module XML export
  - Adds the LoadAllContent method and optimizes loading of content list dropdoowns and Listcontent
  - Performance optimizations for static and dynamic URL handling.
  - Fixes issues when max_upload_filesize is specified in Gigabytes (G) #9415
  - Improve the help for content_image
  - Performance improvements for listcontent and add/editcontent.
  - Search Tweaks
  - Improved and better documented sample htaccess.txt file
  - Adds a dropdown field type to News

Version 1.11.7 - Genovesa
-----------------------------
Core - General
  - Added set_db_timezone config option which will execute the mysql command SET timezone attempting to solve the problem with date calculates wrt
    server timezone vs. user timezone.  Config option defaults to FALSE until CMSMS 2.0
  - Fixes BR#9269. Now it actually validates if output of get_real_ip() is actual IP address. Added another validation to login.php
     Thanks to LeakFree.nl for reporting this!


Version 1.11.6 - Merchena
-----------------------------
Core - General
  - Fixes a couple of XSS vulnerabilities, ** upgrading is recommended **
  - Fixes a problem with template parsing and <head vs. <header
  - Fixes a problem with some modules not listening to the {cms_set_language} stuff... order of execution problem
  - Simplex Theme, functions.js rewriten, fixes to touch menu in Android Chrome and Sample Slider


Version 1.11.5 - Puerto Ayora
-----------------------------
Core - General
  - Global Content Blocks (GCB's) can now only have letters and numbers in the name!!
  - Fixes to caching issues in MenuManager and module templates
  - Admin module actions now catch an exception
  - Fixes problem with error_reporting, takes error_reporting correctly from php.ini
  - Fixes problem with contentprecompile not being fired
  - Significant performance improvement in admin theme calculations (fixes silly error)
  - Fix typo in /lib/classes/module_support/modtemplates.inc.php